dockerized-app/templates/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: ac7d82b3d71374e83a981ec074ffc2c4-1864906922.ap-south-1.elb.amazonaws.com  # replace a.b.c.d with actual EXTERNAL-IP
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
